--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
   <section id="login">
     <form action="login.php" method="post">
-      <input type="text" name="name" placeholder="name" required class="btn">
-      <input type="password" name="pass" placeholder="password" required class="btn">
-      <input type="submit" value="log in">
+      <input type="text" name="name" placeholder="name" required class="btn btn_bck">
+      <input type="password" name="pass" placeholder="password" required class="btn btn_bck">
+      <input type="submit" value="log in" class="btn_bck">
       <br>
-      <label class="registration_btn">Зарегистрироваться
+      <label class="registration_btn btn_bck">Зарегистрироваться
       <input type="checkbox" name="if_registration">
      </label>
-     
     </form>
   </section>
 </body>
