--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <input type="checkbox" name="if_registration">
      </label>
     </form>
+    <h1>Нужна ли регистрация? Просто так!</h1>
+    <ul class ="test_table" style="list-style: none">
+      <li>Allo
+      <li>privet
+      <li> che kak?
+    </ul>
   </section>
 </body>
 
