--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <button onclick="changeColor('red');" class="registration_btn btn_bck">Красный</button>
     <button onclick="changeColor('#d9ddeb');" class="registration_btn btn_bck">Серый</button>
     <button onclick="changeColor(firstcolor);" class="registration_btn btn_bck">Самый первый</button>
+    <p><a href="Flappy_Birds/game.html">Игра</a></p>
   </section>
 
 </body>
